tests/parsing/const_redefinition_in_inst/stderr.golden
error: redefinition of constant 'a', first definition line 2 column 9
bus.fbd +3:9
   |
 3 |   const a = 2
   |         ^
bus.fbd +2:9
   |
 2 |   const a = 1
   |         ^
